# kiwi-pulse

./: .gitignore  README.md  WRITEUP.md  main.py  pyproject.toml
scripts/: README.md  adversarial_tests.py  backtest_synthetic_market.py  baseline_comparison.py  calibration_test.py  decision_comparison.py  decision_simulation.py  demo_real_articles.py  real_world_validation.py  sensitivity_analysis.py  trading_simulation.py  truncated_normal_comparison.py  variance_estimator_comparison.py  visualize_convergence.py  visualize_failure_modes.py  visualize_uncertainty.py
src/: main.py
src/api/: routes.py
src/core/: bayesian_model.py  truncated_normal_model.py
src/llm/: sentiment.py
src/schema/: models.py
tests/: test_bayesian_model.py  test_routes.py
