[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "kiwipulse"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "numpy",
    "openai",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]